--- a/nickname-game/style-nickname.css
+++ b/nickname-game/style-nickname.css
@@ -4,3 +4,99 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
+body{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.container::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("img/danger.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    opacity: 0.3;
+    z-index: -2;
+}
+
+header{
+    width: 100vw;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    font-family: 'Patua One', cursive;
+    font-size: 4.8em;
+    color: #000;
+}
+
+h2{
+    font-size: 2em;
+    margin-top: 1em;
+}
+
+section {
+    width: 100vw;
+    height: 65vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+article {
+    width: 30%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#badass-guy{
+    display: block;
+    width: 21em;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+}
+
+article div {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#bike-guy{
+    display: block;
+    width: 28em;
+    height: auto;
+}
+
+footer{
+    width: 100%;
+    height: 5vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
